updated tutorial and accompagnying code

--- a/doc/tutorial/concepts.tex
+++ b/doc/tutorial/concepts.tex
@@ -2,7 +2,7 @@
 {\em See cpp/py files in the directory \file{doc/tutorial/code/dc1d}.}
 \subsection{Smooth inversion}\label{sec:dc1dsmooth}
 {\em Example file \file{dc1dsmooth.cpp}.}\\
-Part of the GIMLi library are several electromagnetic 1d forward operators.
+Included into the GIMLi library are several electromagnetic 1d forward operators.
 For direct current resistivity there is a semi-analytical solution using infinite sums that are approximated by Ghosh filters. 
 The resulting function calculates the apparent resistivity of any array for a given resistivity and thickness vector.
 There are two main parameterisation types:
