--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-27
+    version bump -> 0.9.0
+    internal change of jacobian storage. 
+    Jacobian is now stored in forward modelling class.
+    
+
 2012-01-17
     meshconvert.py 
         - add input support for *.mod(dc2dinvres), *.vtk, *.vtu(untested)
