win32 gcc.4.6.1 version bump (pygimli part)

--- a/README
+++ b/README
@@ -74,3 +74,65 @@ cmake >=2.8.7
 Add boost include path to the build:
 
 CPPFLAGS='-I /c/home/boost/include' ./configure
+
+
+------------------------------------------------------------------
+---- docu parts to clean up --------------------------------------
+------------------------------------------------------------------
+Step by step: what I did on vanilla win7-64bin:
+win7-64.prof, gcc-4.6.1, boost-1.48.0, python-2.7.2	
+
+install:
+	mingw (mingw-get-inst-20111118.exe) (toolchain)
+	TortoiseSVN-1.7.4.22459-x64-svn-1.7.2 (libgimli sources)
+	>=cmake-2.8.7 (blas, lapack, gccxml)
+	python-2.7.2 (python binding, boost)
+	codeblocks-10.05-setup
+	http://www.sliksvn.com/en/download (cmd-line tool for pygccxml)
+--- reboot ---
+
+adjust ~/.profile:
+
+> export PATH=/c/python27:$PATH
+
+choose an installation path
+e.g.: (note, path might be created first)
+> cd /c/user/$USER/src
+
+Getting libgimli sources:
+
+> svn co https://libgimli.svn.sourceforge.net/svnroot/libgimli/trunk libgimli
+
+Install third party dependencies: triangle, suitesparse
+
+> cd libgimli/externals
+> make
+
+Install third party dependencies: blas, lapack
+
+> cd libgimli/externals
+> make lapack
+
+copy blas and lapack into libgimli/mingw path
+
+Install third party dependencies: boost
+	
+> wget -nc -nd http://sourceforge.net/projects/boost/files/boost/1.48.0/boost_1_48_0.tar.gz
+> tar -xzvf boost_1_48_0.tar.gz
+(maybee some errors using tar at command line, choose totalcommander instead)
+
+fix boot sources that boost-python can be build
+
+> sh libglimli/python/buildScripts/buildBoostWin32.sh
+
+copy libboost-threads into libgimli/mingw path
+
+build libgimli.dll by using codeblocks
+
+> sh libglimli/python/buildScripts/buildToolChain.sh
+
+build pygimli
+
+
+
+
