added some more sphinx infrastructure

--- a/doc/_static/mylatex-commands.sty
+++ b/doc/_static/mylatex-commands.sty
@@ -4,12 +4,18 @@
 \RequirePackage{trfsigns}
 \RequirePackage{amsmath}
 
+\newcommand{\arr}[1]{\ensuremath{\textbf{#1}}}
+\newcommand{\transpose}[1]{\ensuremath{{#1}^{\text{T}}}}
+
 \renewcommand{\d}{\ensuremath{\,\operatorname{d}}}
 \renewcommand{\e}{\ensuremath{\operatorname{e}}}
 \renewcommand{\i}{\ensuremath{\operatorname{i}}}
 
-\newcommand{\arr}[1]{\ensuremath{\textbf{#1}}}
-\newcommand{\transpose}[1]{\ensuremath{{#1}^{\text{T}}}}
+\newcommand{\m}{\arr{m}}
+\newcommand{\f}{\arr{f}}
+\newcommand{\x}{\arr{x}}
+\newcommand{\A}{\arr{A}}
+
 
 \newcommand{\fourierT}{\ensuremath{\multimap}}
 \newcommand{\ifourierT}{\ensuremath{\multimap_{\text{I}}}}
