--- a/TODO
+++ b/TODO
@@ -1,2 +1,21 @@
 we want to use sourceforce tracker for this task
 http://sourceforge.net/tracker/?group_id=542831
+
+
+Feature-Übersicht@sphinx
+
+****
+TODO
+****
+
+Alternative inversion strategies
+--------------------------------
+    
+    * cg
+    * gradient
+    * stochastic solver (monte carlo, minimization, particle swarm, bee swarm colonization (BSC), GA, SA)
+
+    Extra constraints:  SparseMapMatrix * model = double (e.g., fix sum of parametrization)
+
+Adaptive geometry
+-----------------
