--- a/README
+++ b/README
@@ -2,9 +2,8 @@ GIMLi - Geophysical Inversion and Modelling Library
         an open-source multi-method library for solving inverse and forward tasks
 
 Tested with:
-    gentoo x86_64 gcc-4.4.5
-    gentoo x86_64 gcc-4.5.3
-    mingw win32 gcc-4??
+    gentoo x86_64 gcc-4.4.5, gcc-4.5.3, gcc-4.5.4
+    mingw win32 gcc-4.6.2 (gcc-4.7.0 DOES NOT WORK!!!!! strange segfault while dll call)
     mingw win64 gcc-4.5.4 (without python bindings)
 
 
